[package]
name = "md-postprocess"
version = "0.1.0"
authors = ["Wonsup Yoon <pusnow@kaist.ac.kr>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A simple md postprocess"
homepage = "https://github.com/Pusnow/md-postprocess"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"